Resolves "The online help navigation panel is too narrow" (https://issues.apache.org/jira/browse/OFBIZ-4066) - OFBIZ-4066
But in Flat Grey, even when you had the content of the bluelight/help.css in flatgrey/help.css...

I have set the default lookup_popup2 size to width=900 height=700, now that anyway OFBiz is designed to be used with at least a 1024*768 screen

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1056986 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/bizznesstime/webapp/bizznesstime/css/help.css
+++ b/themes/bizznesstime/webapp/bizznesstime/css/help.css
@@ -21,7 +21,7 @@ body {
 }
 
 .left-border {
-    float:left;width:25%;
+    float:left;width:30%;
 }
 
 .contentarea {
