--- a/themes/droppingcrumbs/webapp/droppingcrumbs/css/help.css
+++ b/themes/droppingcrumbs/webapp/droppingcrumbs/css/help.css
@@ -24,7 +24,7 @@ font-size=105%;
 
 .left-border {
 float:left;
-width:20em;
+width:50em;
 }
 
 div.contentarea {
@@ -37,7 +37,7 @@ min-height:25em;
 }
 
 #column-container .leftonly {
-margin-left:20em;
+margin-left:50em;
 width:auto;
 }
 
